--- a/app.json
+++ b/app.json
@@ -5,7 +5,6 @@
     "pages/details/details",
     "pages/loginRegister/login/login",
     "pages/loginRegister/register/register",
-    "template/business/business",
     "pages/Union/Union",
     "pages/Member/Member",
     "pages/company/company"
@@ -14,7 +13,8 @@
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "black",
+    "enablePullDownRefresh": true
   },
   "tabBar": {
     "color": "#333333",
